print to video the card